--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/elumixor/extensions.git"
   },
-  "files": [
-    "./dist"
-  ],
+  "files": ["./dist"],
   "scripts": {
     "build": "bun run build:bundle && bun run build:declaration",
     "build:bundle": "bun build ./src/index.ts --outdir ./dist",
@@ -23,14 +21,7 @@
     "release:minor": "npm version minor -m \"Release v%s\" && git push --tags",
     "release:major": "npm version major -m \"Release v%s\" && git push --tags"
   },
-  "keywords": [
-    "extensions",
-    "array",
-    "set",
-    "string",
-    "prototype",
-    "utilities"
-  ],
+  "keywords": ["extensions", "array", "set", "string", "prototype", "utilities"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
