--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elumixor/extensions",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "JavaScript/TypeScript extensions for Array, Set, and String prototypes",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,9 @@
     "type": "git",
     "url": "git+https://github.com/elumixor/extensions.git"
   },
-  "files": ["./dist"],
+  "files": [
+    "./dist"
+  ],
   "scripts": {
     "build": "bun run build:bundle && bun run build:declaration",
     "build:bundle": "bun build ./src/index.ts --outdir ./dist",
@@ -21,7 +23,14 @@
     "release:minor": "npm version minor -m \"Release v%s\" && git push --tags",
     "release:major": "npm version major -m \"Release v%s\" && git push --tags"
   },
-  "keywords": ["extensions", "array", "set", "string", "prototype", "utilities"],
+  "keywords": [
+    "extensions",
+    "array",
+    "set",
+    "string",
+    "prototype",
+    "utilities"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
